# bazel-jsonnett-templates

./: README.md  WORKSPACE
.repository/: license.spdx
data/: BUILD.bazel
data/bar/: config.json
data/foo/: config.json  config.jsonnet
lib/: BUILD.bazel
lib/api/models/v1.1/: model.libsonnet
lib/blueprint/models/v1.0/: model.libsonnet
templates/: BUILD.bazel  defs.bzl  wordcount.libsonnet
